Converting Proxy to override crashes blender #83875

Closed
opened 2020-12-17 06:54:07 +01:00 by EchoDot · 15 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics Intel 4.5.0 - Build 26.20.100.7323

Blender Version
Broken: version:

  • 2.92.0 Alpha, branch: master, commit date: 2020-12-16 23:32, hash: 3a1d1aaa86
  • 2.91.0
    Worked: Never

Short description of error
When I append in my character and try to convert the proxy to override, blender crashes

Exact steps for others to reproduce the error
I appended the blender 2.79 splash screen agent 327 proxy and converted to relations and it is crashing.

  • Download the Agent 327 file.
  • Open Blender
  • File > Append the Object > agent_high_proxy
  • Select the agent_high_proxy and use Object > Relations > Convert Proxy to Override

Here are the blend file, debug files and crash text
blender_system_info.txt

blender_debug_output.txt

agent.crash.txt

agent.blend
Thanks!

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) UHD Graphics Intel 4.5.0 - Build 26.20.100.7323 **Blender Version** Broken: version: - 2.92.0 Alpha, branch: master, commit date: 2020-12-16 23:32, hash: `3a1d1aaa86` - 2.91.0 Worked: Never **Short description of error** When I append in my character and try to convert the proxy to override, blender crashes **Exact steps for others to reproduce the error** I appended the blender 2.79 splash screen agent 327 proxy and converted to relations and it is crashing. - [Download the Agent 327 file. ](https://cloud.blender.org/p/gallery/59819ee681191741ad07d283) - Open Blender - *File > Append* the *Object > agent_high_proxy* - Select the *agent_high_proxy* and use *Object > Relations > Convert Proxy to Override* Here are the blend file, debug files and crash text [blender_system_info.txt](https://archive.blender.org/developer/F9514448/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F9514449/blender_debug_output.txt) [agent.crash.txt](https://archive.blender.org/developer/F9514450/agent.crash.txt) [agent.blend](https://archive.blender.org/developer/F9514451/agent.blend) Thanks!
Author

Added subscriber: @EchoDot

Added subscriber: @EchoDot

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this issue, but I'm getting a slightly different stack trace as the BLI_assert(id->lib != NULL); is triggered.

_BLI_assert_abort() Lines 51	C
lib_override_library_make_tag_ids_cb(LibraryIDLinkCallbackData * cb_data) Lines 490	C
BKE_lib_query_foreachid_process(LibraryForeachIDData * data, ID * * id_pp, int cb_flag) Lines 76	C
library_foreach_ID_link(Main * bmain, ID * id_owner, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag, LibraryForeachIDData * inherit_data) Lines 243	C
BKE_library_foreach_ID_link(Main * bmain, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag) Lines 293	C
lib_override_library_create_do(Main * bmain, ID * id_root) Lines 529	C
BKE_lib_override_library_create(Main * bmain, Scene * scene, ViewLayer * view_layer, ID * id_root, ID * id_reference) Lines 669	C
BKE_lib_override_library_proxy_convert(Main * bmain, Scene * scene, ViewLayer * view_layer, Object * ob_proxy) Lines 719	C
convert_proxy_to_override_exec(bContext * C, wmOperator * UNUSED_op) Lines 2542	C
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Lines 1305	C
wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Lines 1500	C
WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Lines 1549	C
ui_apply_but_funcs_after(bContext * C) Lines 939	C
ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Lines 10822	C
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Lines 636	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Lines 2762	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Lines 2870	C
wm_event_do_handlers(bContext * C) Lines 3293	C
WM_main(bContext * C) Lines 638	C
main(int argc, const unsigned char * * UNUSED_argv_c) Lines 526	C
I can confirm this issue, but I'm getting a slightly different stack trace as the `BLI_assert(id->lib != NULL);` is triggered. ```lines _BLI_assert_abort() Lines 51 C lib_override_library_make_tag_ids_cb(LibraryIDLinkCallbackData * cb_data) Lines 490 C BKE_lib_query_foreachid_process(LibraryForeachIDData * data, ID * * id_pp, int cb_flag) Lines 76 C library_foreach_ID_link(Main * bmain, ID * id_owner, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag, LibraryForeachIDData * inherit_data) Lines 243 C BKE_library_foreach_ID_link(Main * bmain, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag) Lines 293 C lib_override_library_create_do(Main * bmain, ID * id_root) Lines 529 C BKE_lib_override_library_create(Main * bmain, Scene * scene, ViewLayer * view_layer, ID * id_root, ID * id_reference) Lines 669 C BKE_lib_override_library_proxy_convert(Main * bmain, Scene * scene, ViewLayer * view_layer, Object * ob_proxy) Lines 719 C convert_proxy_to_override_exec(bContext * C, wmOperator * UNUSED_op) Lines 2542 C wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Lines 1305 C wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Lines 1500 C WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Lines 1549 C ui_apply_but_funcs_after(bContext * C) Lines 939 C ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Lines 10822 C wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Lines 636 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Lines 2762 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Lines 2870 C wm_event_do_handlers(bContext * C) Lines 3293 C WM_main(bContext * C) Lines 638 C main(int argc, const unsigned char * * UNUSED_argv_c) Lines 526 C ```

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

Please be more specific and precise in your description, with proper steps and using proper names.

'append' and proxy/overrides do not really go together, since appended data is fully local, so I assume your mean 'linking'? And what exactly are you linking? how do you make your proxy? etc. etc.

Please be more specific and precise in your description, with proper steps and using proper names. 'append' and proxy/overrides do not really go together, since appended data is fully local, so I assume your mean 'linking'? And what exactly are you linking? how do you make your proxy? etc. etc.

@rjg same goes for you if you can reproduce then...

@rjg same goes for you if you can reproduce then...

Oops, my bad, didn't see you updated the task description... let me check again

Oops, my bad, didn't see you updated the task description... let me check again

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Bastien Montagne self-assigned this 2020-12-17 11:22:10 +01:00

Well, that object is not a proxy at all, after append it's purely local data, not sure why this operator even tries to perform here.

Well, that object is not a proxy **at all**, after append it's purely local data, not sure why this operator even tries to perform here.

Meh. even worse, it's actually a proxy to a linked data that is missing...

Meh. even worse, it's actually a proxy to a linked data that is missing...

This issue was referenced by a8998af85d

This issue was referenced by a8998af85d99a8f0117ed919c500dbdccf0ffd32

This issue was referenced by cf2ebaf27c

This issue was referenced by cf2ebaf27c78b3f8f79d9d014ca2261228f87e70

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83875
No description provided.